@startuml
'https://plantuml.com/class-diagram

package "presentation" #DDDDDD{
    class CreatePostItUI <<ui>>{
    - theController : CreatePostItController
    + doShow()
    }
}

package "domain" #dbd8ae{
        class PostIt <<entity>>{
        - owner : SystemUser
        - parent : PostIt
        - next : PostIt
        - content : Content
        - timestamp : Calendar
        - isDeleted : boolean
        + PostIt(owner, content)
        + PostIt(parent, newContent)
        + PostIt(parent)

        }
        class Content<<value object>>{
        - textContent: String
         }

        class SharedBoard <<aggregate root>> <<entity>>{
       -owner : SystemUser
               - rowNumber: NumberOfRow
               - columnNumber: NumberOfColumn
               - Set <Cell> cells : Cell
               - Set<Modification> modifications : Modification
               + SharedBoard(owner, rowNumber, columnNumber, cells title)
               + availableCells()
               +addCreationModification(createdPostIt, cell)
        }

      class Cell <<entity>>{
             - row : BoardRow
             - column : BoardColumn
             +  Cell (row, column)
             + canHavePostIt()
             + addPostIt (owner, content)
             + latestPostIt()
       }
}
    package "persistence" #dbd8ae{
       interface BoardRepository{
       + findBySystemUserWithWritePermission(user)
       + save(board)
       }
    }
package "application" #eaf4d3{
    class CreatePostItController <<controller>>{
        - authz : AuthorizationService
        - boardSvc : BoardManagementService
        - boardRepository : BoardRepository
        + createPostIt(board, cell, content)
        + sharedBoardWithWritePermission()
        + registerPrimaryBoardModification(board, createdPostIt, modificationType, cell)
        + currentUser()
    }

    class BoardManagementService <<service>>{
         - boardRepository : BoardRepository
         + availableCells(board)
         + allBoardsBySystemUserWithWritePermission(user)
    }

}


CreatePostItUI .-> CreatePostItController
CreatePostItController .-> BoardManagementService



BoardManagementService .> BoardRepository

PostIt --> Content
Cell -> PostIt
SharedBoard --> Cell
CreatePostItController .--> SharedBoard


@enduml
